--- a/docker/ubuntu/Dockerfile.ubuntu
+++ b/docker/ubuntu/Dockerfile.ubuntu
@@ -8,9 +8,14 @@ WORKDIR $WORK_SHELL
 #ADD ./sources.list /etc/apt/sources.list
 #RUN apt update && apt install -y init
 
-ADD ./script.sh $WORK_SHELL/
+ADD changepwd.sh script.sh $WORK_SHELL/
+ADD docker-entrypoint.sh /data/startup/
+
+RUN chmod +x $WORK_SHELL/*.sh /data/startup/*.sh
+
 RUN $WORK_SHELL/script.sh
 
+ENTRYPOINT ["/data/startup/docker-entrypoint.sh"]
 #CMD ["bash", "-c" ,"$WORK_SHELL/init.sh"]
 
 
