--- a/ubuntu/Vagrantfile
+++ b/ubuntu/Vagrantfile
@@ -7,7 +7,7 @@
 # you're doing.
 Vagrant.configure("2") do |config|
 
-  #config.vm.box = "ubuntu20.04"
+  #config.vm.box = "ubuntu23.04"
   #config.vm.hostname = "mydocker"
   #config.vm.network "private_network", ip: "192.168.10.9"
 #
@@ -25,9 +25,10 @@ Vagrant.configure("2") do |config|
   #config.vm.provision "shell", path: "script.sh"
 
   config.vm.define :node1 do |node1|
-    node1.vm.box = "ubuntu20.04"
+    node1.vm.box = "ubuntu23.04"
     node1.vm.hostname = "node1"
-    node1.vm.network "public_network", ip: "192.168.101.83", netmask: "255.255.255.0", gateway: "192.168.101.254", bridge: "enp2s0"
+    node1.vm.network "public_network", ip: "192.168.101.84", netmask: "255.255.255.0", gateway: "192.168.101.254", bridge: "enp2s0"
+    node1.vm.network "public_network", ip: "172.17.0.22", netmask: "255.255.255.0", bridge: "docker0"
     #node1.vm.synced_folder "/data/fabric", "/data/fabric"
     node1.vm.provider "virtualbox" do |vb|
       #vb.gui = true
@@ -48,9 +49,9 @@ Vagrant.configure("2") do |config|
 
 
   #config.vm.define :node2 do |node2|
-  #  node2.vm.box = "ubuntu20.04"
+  #  node2.vm.box = "ubuntu23.04"
   #  node2.vm.hostname = "node2"
-  #  node2.vm.network "public_network", ip: "192.168.101.84", netmask: "255.255.255.0", gateway: "192.168.101.254", bridge: "enp2s0"
+  #  node2.vm.network "public_network", ip: "192.168.101.85", netmask: "255.255.255.0", gateway: "192.168.101.254", bridge: "enp2s0"
   #  node2.vm.synced_folder "/data/fabric", "/data/fabric"
   #  node2.vm.provider "virtualbox" do |vb|
   #    #vb.gui = true
